fix modal button spacing (#799)
* fix modal button spacing

* moved the solution to a gap

--- a/packages/Modal/src/modal.scss
+++ b/packages/Modal/src/modal.scss
@@ -46,6 +46,7 @@
         --ids-modal-full-content-close-spacing-vertical: #{tokens.$space-1};
         --ids-modal-footer-margin: #{tokens.$space-2} -#{tokens.$space-2} -#{tokens.$space-2};
         --ids-modal-footer-action-margin: #{tokens.$space-2} #{tokens.$space-2};
+        --ids-modal-footer-action-gap: 0;
     }
 
     [data-brand="workleap"] {
@@ -87,7 +88,8 @@
         --ids-modal-full-content-close-spacing-horizontal: calc(var(--hop-space-inline-xs) + var(--hop-space-inline-sm));
         --ids-modal-full-content-close-spacing-vertical: calc(var(--hop-space-stack-xs) + var(--hop-space-stack-sm));
         --ids-modal-footer-margin: var(--hop-space-stack-sm) calc(-1 * var(--hop-space-inline-sm)) calc(-1 * var(--hop-space-stack-sm));
-        --ids-modal-footer-action-margin: var(--hop-space-stack-sm) var(--hop-space-inline-sm);
+        --ids-modal-footer-action-margin: 0;
+        --ids-modal-footer-action-gap: var(--hop-space-inset-sm);
     }
 
     @media (width >= #{tokens.$breakpoints-sm}) {
@@ -323,6 +325,7 @@
         align-items: center;
         display: flex;
         flex-wrap: wrap;
+        gap: var(--ids-modal-footer-action-gap);
         justify-content: flex-end;
         margin: var(--ids-modal-footer-margin);
         margin-top: auto;
